<resources>
    <string name="app_name">DetailedRecyclerView-Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quentin_tarantino">Quentin Tarantino</string>
    <string name="_2008">2008</string>
    <string name="_15_99">15.99 ₺</string>
    <string name="buy">BUY</string>
    <string name="django">Django</string>
    <string name="let_me_know">Let me know</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>